--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -55,14 +55,14 @@
             ::-webkit-scrollbar-thumb {
                 background: #939393;
                 border-radius: 8px;
-                border: 4px solid #191919;
+                border: 4px solid #0e0e10;
             }
             ::-webkit-scrollbar-thumb:hover {
                 background: #7c7c7c;
             }
         </style>
     </head>
-    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" style="background: #191919;transition: width 1s, height 1s;">
+    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" style="background: #0e0e10;transition: width 1s, height 1s;">
     <div class="container">
     <div class="map_search_box">
         <a href="#topSite" class="scroll-to menu_home" id="h_butt">
