--- a/my_web/static/my_web/bootstrap/css/bootstrap-reboot.css
+++ b/my_web/static/my_web/bootstrap/css/bootstrap-reboot.css
@@ -30,7 +30,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #efeff1;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
