--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -51,7 +51,7 @@
         width: 18px;
         border: 4px solid;
         border-radius: 50%;
-        border-color: #fff;
+        border-color: #efeff1;
         opacity: .2;
         animation: shine 4s ease-in-out 1.3s infinite;
     }
@@ -106,7 +106,7 @@
         width: 12px;
         border: 3px solid;
         border-radius: 50%;
-        border-color: #fff;
+        border-color: #efeff1;
         opacity: .2;
         animation: shine 1.7s ease-in-out 7s infinite;
     }
@@ -177,7 +177,7 @@
         top: -10px;
         height: 20px;
         border-radius: 100%;
-        background-color: #fff;
+        background-color: #efeff1;
     }
     .box_aware_error .box_aware_error__ghost .box_aware_error__ghost-container .box_aware_error__ghost-bottom div:nth-child(2n) {
         top: -12px;
@@ -199,7 +199,7 @@
         transform: translateX(-50%);
     }
     .box_aware_error .box_aware_error__description .box_aware_error__description-container {
-        color: #fff;
+        color: #efeff1;
         text-align: center;
         width: 16em;
         font-size: 16px;
@@ -223,7 +223,7 @@
         height: 50px;
         text-align: center;
         text-decoration: none;
-        color: #fff;
+        color: #efeff1;
         line-height: 50px;
         font-size: 18px;
         padding: 0 70px;
@@ -247,7 +247,7 @@
     }
     .box_aware_error .box_aware_error__description .box_aware_error__button:hover {
         background: transparent;
-        border-color: #fff;
+        border-color: #efeff1;
     }
     .box_aware_error .box_aware_error__description .box_aware_error__button:hover:before {
         transform: translateX(250px) rotate(45deg);
@@ -331,7 +331,7 @@
     }
 
     ::selection{
-      color: #fff;
+      color: #efeff1;
       background: #969696;
     }
 
@@ -426,7 +426,7 @@
     }
 
     a {
-        color: #fff;
+        color: #efeff1;
     }
 
     a:hover {
@@ -499,7 +499,7 @@
         top: 10px;
         left: 10px;
         height: 50px;
-        background-color: #202124;
+        background-color: #18181b;
         border-radius: 10px;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
         z-index: 109;
@@ -511,7 +511,7 @@
         top: 0px;
         left: 0px;
         height: 15px;
-        background-color: #202124;
+        background-color: #18181b;
         z-index: 99;
     }
 
@@ -537,7 +537,7 @@
         right: 10px;
         z-index: 110;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
-        background-color: #202124;
+        background-color: #18181b;
         border-radius: 10px;
         -webkit-backdrop-filter: blur(15px);
         backdrop-filter: blur(15px);
@@ -562,15 +562,15 @@
     .menu_item_first {
         border-top-right-radius: 10px;
         border-top-left-radius: 10px;
-        background: #202124;
-        color: #ffffff;
+        background: #18181b;
+        color: #efeff1;
     }
 
     .menu_item_last {
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
         border-width: 0;
-        background: #202124;
+        background: #18181b;
     }
 
     .menu_item .icon_container {
@@ -580,7 +580,7 @@
         width: 50px;
         font-size: 20px;
         margin-top: 2px;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .menu_item i {
@@ -595,7 +595,7 @@
         float: left;
         margin-left: 10px;
         margin-right: 30px;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .menu_item label:hover {
@@ -633,12 +633,12 @@
         font-size: 24px;
         font-weight: bold;
         padding-top: 7px;
-        background: #202124;
+        background: #18181b;
         color: #dedede;
     }
 
     .map_search_box i:hover {
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .map_search_box a {
@@ -647,7 +647,7 @@
 
     .map_search_box a:hover {
         text-decoration: none;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .map_place_info_box {
@@ -742,7 +742,7 @@
         height: 20px;
         text-align: center;
         border-radius: 100%;
-        background-color: #ffffff;
+        background-color: #efeff1;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
         padding-top: 2px;
         z-index: 110;
@@ -1149,7 +1149,7 @@
     .tasks .deliver_nickname {
         margin-top: 2px;
         font-size: 12px;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .tasks_header .actions {
@@ -1332,7 +1332,7 @@
     .user .username {
         font-weight: bold;
         margin-bottom: 0;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .user {
@@ -1344,13 +1344,13 @@
     .user .city {
         font-size: 12px;
         margin-bottom: 0;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .user .status {
         font-size: 12px;
         margin-bottom: 0;
-        color: #ffffff;
+        color: #efeff1;
     }
 
     .user i {
@@ -1410,7 +1410,7 @@
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
-        background-color: #202124;
+        background-color: #18181b;
     }
 
     .pending_event .title {
