--- a/my_web/static/my_web/fontawesome/css/svg-with-js.css
+++ b/my_web/static/my_web/fontawesome/css/svg-with-js.css
@@ -103,7 +103,7 @@ svg:not(:root).svg-inline--fa {
   border-radius: 1em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #fff;
+  color: #efeff1;
   height: 1.5em;
   line-height: 1;
   max-width: 5em;
@@ -325,7 +325,7 @@ svg:not(:root).svg-inline--fa {
   width: 2.5em; }
 
 .fa-inverse {
-  color: #fff; }
+  color: #efeff1; }
 
 .sr-only {
   border: 0;
@@ -368,4 +368,4 @@ svg:not(:root).svg-inline--fa {
   fill: black; }
 
 .fad.fa-inverse {
-  color: #fff; }
+  color: #efeff1; }
