--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -123,7 +123,7 @@
                 <div style="float: left;">
                     <div class="col-xs-12">
                         <div class="weather-panel col-xs-12 col-sm-12"
-                        style="color: #fff;">
+                        style="color: #efeff1;">
                             <div class="col-xs-6">
                                 <h2>{{ weather.now_weather.name }}<br>
                                     <small style="color: inherit;font-size: 50%;">
