update error page

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -10,7 +10,7 @@
         <meta name="og:url" content="https://www.awse.us{% block url_path %}{% endblock %}">
         <meta name="og:site_name" content="AWARE">
         <meta name="og:locale" content="ru_RU">
-        <meta name="theme-color" content="#202124">
+        <meta name="theme-color" content="#0e0e10">
         <meta name="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:description" content="{% block twitter_desc %}{% endblock %}">
