--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -1,10 +1,23 @@
 <html lang="en"><head><meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="og:description" content="AWARE - Error {{ error_code }}">
+    <meta name="og:url" content="https://www.awse.us/">
+    <meta name="og:site_name" content="AWARE">
+    <meta name="og:locale" content="en_US">
+    <meta name="theme-color" content="#0e0e10">
+    <meta name="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="AWARE - Error {{ error_code }}">
+    <meta name="keywords" content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации, поиск, новости, новое, образование, бесплатно, свободно, свободное">
+    <meta name="author" content="Koval Yaroslav">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>AWARE - Error {{ error_code }}</title>
     <style>
       *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5;}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size: 5em;}@media only screen and (min-resolution:192dpi){}@media only screen and (-webkit-min-device-pixel-ratio:2){}#logo{display:inline-block;height:54px;width:150px}
     </style>
     </head><body><a href="https://www.awse.us/?q=%D0%9E%D1%88%D0%B8%D0%B1%D0%BA%D0%B0+{{ error_code }}"><span id="logo" aria-label="AWSE.US">AWSE.US</span></a>
-    <p><b>{{ error_code }}.</b> <ins>That’s an error.</ins>
-    </p><p>{{ description }}. <ins>That’s all we know.</ins>
+    <p><b>{{ error_code }}.&nbsp;</b><ins>That’s an error.</ins>
+    </p><p>{{ description }}.&nbsp;<ins>That’s all we know.</ins>
   </p></body></html>
