--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -9,12 +9,12 @@
         <meta name="og:description" content="{% block og_desc %}{% endblock %}">
         <meta name="og:url" content="https://www.awse.us{% block url_path %}{% endblock %}">
         <meta name="og:site_name" content="AWARE">
-        <meta name="og:locale" content="ru_RU">
+        <meta name="og:locale" content="en_US">
         <meta name="theme-color" content="#0e0e10">
         <meta name="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:description" content="{% block twitter_desc %}{% endblock %}">
-        <meta name="keywords" content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации, поиск, новости, новое, образование, бесплатно, свободно, свободное">
+        <meta name="keywords" content="website, website, word, history, text, freedom, social network, network, social, social network, post, posts, story, fantasy, publications, search, news, new, education, free, free, free">
         <meta name="author" content="Koval Yaroslav">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
