--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -28,7 +28,7 @@ AWARE
                 <label class="username">{{ aware.title }}</label><br/><br/>
                 <label class="city qwriter-content-block" style="width:100%;">
                     {{ aware.page_html_code|safe }}<br/>
-                    <p>Эта страница сгенерирована специально для Telegram бота AWARE</p>
+                    <p>This page was generated specifically for the Telegram bot AWARE</p>
                     <br></label>
             </div>
         </div>
