--- a/my_web/templates/my_web/page_notify.html
+++ b/my_web/templates/my_web/page_notify.html
@@ -1,9 +1,8 @@
 <div class="col-12 col-lg-12 padding-block-center-box">
     <div class="user box aos-init aos-animate" data-aos="fade-up">
         <div style="float: left; ">
-
-            <label class="username">Подсказка </label><br>
-            <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label>
+            <label class="username">Prompt</label><br>
+            <label class="city"><b>Now you see content that corresponds to the address to which you went.</b></label>
         </div>
     </div>
 </div>
