update covid block

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -29,7 +29,7 @@
                         <span style="
                             margin: 0.5em;
                         ">COVID-19&nbsp;
-                            <i class="fas fa-calculator"></i>
+                            <i class="fas fa-viruses"></i>
                         </span>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <span style="
                             margin: 0.5em;
                         ">COVID-19&nbsp;
-                            <i class="fas fa-calculator"></i>
+                            <i class="fas fa-viruses"></i>
                         </span>
                     </div>
                 </div>
