--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -143,6 +143,21 @@
                             This feature is currently unavailable, sorry.
                         </i>
                     </label>
+                    <br/>
+                    <div style="
+                        background: #fff;
+                        border-radius: 0.5em;
+                        font-weight: 600;
+                        font-size: 0.9em;
+                        margin-top: 1em;
+                        display: inline-block;
+                    ">
+                        <span style="
+                            margin: 0.5em;
+                        ">Special&nbsp;
+                            <i class="fas fa-hashtag"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
