update namaz block

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -249,6 +249,21 @@
                             Updated: {{ el.update_time }} (Server time)
                         </p>
                     </label>
+                    <br/>
+                    <div style="
+                        background: #fff;
+                        border-radius: 0.5em;
+                        font-weight: 600;
+                        font-size: 0.9em;
+                        margin-top: 1em;
+                        display: inline-block;
+                    ">
+                        <span style="
+                            margin: 0.5em;
+                        ">Namaz&nbsp;
+                            <i class="fas fa-quran"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
