update telegram bot block

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -368,6 +368,21 @@
                         <label class="city">
                             Convenient search engine directly in Telegram. To go to the bot - click on its alias <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
                         </label>
+                        <br/>
+                        <div style="
+                            background: #fff;
+                            border-radius: 0.5em;
+                            font-weight: 600;
+                            font-size: 0.9em;
+                            margin-top: 1em;
+                            display: inline-block;
+                        ">
+                            <span style="
+                                margin: 0.5em;
+                            ">Telegram&nbsp;
+                                <i class="fab fa-telegram-plane"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
